objects/SMAX_PS_Work_Order_Assign_Filter__c.object
<CustomObject>
    <label>Work Order Assign Filter</label>
    <nameField>
        <displayFormat>WOAF-{00000000}</displayFormat>
        <label>Work Order Assign Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Assign Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Order Assign Filters</relationshipLabel>
        <relationshipName>Work_Order_Assign_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Work Order Assign Filters</relationshipLabel>
        <relationshipName>Work_Order_Assign_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Filter_On__c</fullName>
        <label>Filter On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work Order: Number</fullName>
                </value>
                <value>
                    <fullName>Work Order: SAP Service Order Number</fullName>
                </value>
                <value>
                    <fullName>Work Order: Account</fullName>
                </value>
                <value>
                    <fullName>Work Order: Customer Number</fullName>
                </value>
                <value>
                    <fullName>Work Order: Account City</fullName>
                </value>
                <value>
                    <fullName>Work Order: Location</fullName>
                </value>
                <value>
                    <fullName>Work Order: Is Enterprise</fullName>
                </value>
                <value>
                    <fullName>Work Order: Billing Type</fullName>
                </value>
                <value>
                    <fullName>Work Order: Order Status</fullName>
                </value>
                <value>
                    <fullName>Work Order: Technician</fullName>
                </value>
                <value>
                    <fullName>Technician: Name</fullName>
                </value>
                <value>
                    <fullName>Technician: Service Team</fullName>
                </value>
                <value>
                    <fullName>Technician: Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Order Assign Filters</relationshipLabel>
        <relationshipName>Work_Order_Assign_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account_City__c</fullName>
        <label>Account City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Filter_Label__c</fullName>
        <label>Filter Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold - Credit</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Ready to Dispatch</fullName>
                </value>
                <value>
                    <fullName>Technician Accepted</fullName>
                </value>
                <value>
                    <fullName>Technician Rejected</fullName>
                </value>
                <value>
                    <fullName>Technician Enroute</fullName>
                </value>
                <value>
                    <fullName>Technician Onsite</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer</fullName>
                </value>
                <value>
                    <fullName>Estimate Approved</fullName>
                </value>
                <value>
                    <fullName>Estimate Rejected</fullName>
                </value>
                <value>
                    <fullName>Requires Revisit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Work Order Assign Filters</relationshipLabel>
        <relationshipName>Work_Order_Assign_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Number__c</fullName>
        <description>SAP Sold-To Customer Number</description>
        <inlineHelpText>SAP Sold-To Customer Number</inlineHelpText>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Numbers__c</fullName>
        <label>Work Order Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Assign_View__c</fullName>
        <label>Work Order Assign View</label>
        <referenceTo>SMAX_PS_Work_Order_Assign_View__c</referenceTo>
        <relationshipLabel>Work Order Assign Filters</relationshipLabel>
        <relationshipName>SMAX_PS_Work_Order_Assign_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>